--- a/css/style.css
+++ b/css/style.css
@@ -448,15 +448,12 @@ nav {
 }
 
 .about__left:hover {
-  padding: 1px;
-  -webkit-box-shadow: 10px 5px 5px #bbfa80;
-          box-shadow: 10px 5px 5px #bbfa80;
+  -webkit-box-shadow: 10px 5px 5px rgba(226, 128, 250, 0.7);
+          box-shadow: 10px 5px 5px rgba(226, 128, 250, 0.7);
 }
 
 .about__left:hover .name-shool {
-  font-size: 20px;
-  font-weight: 900;
-  color: green;
+  color: #c717f3;
 }
 
 .about__title {
@@ -622,6 +619,10 @@ nav {
 
 .swiper-wrapper {
   margin-bottom: 50px;
+}
+
+.modal {
+  margin-top: 50px;
 }
 
 .--teach-title {
@@ -1123,12 +1124,16 @@ nav {
           justify-content: center;
 }
 
+.rewiews__author img {
+  border-radius: 10px;
+}
+
 .rewiews__text {
-  font-style: italic;
-  font-weight: 300;
-  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
   line-height: 30px;
-  color: #646464;
+  color: #000000;
   max-width: 385px;
   width: 100%;
   margin-top: 20px;
